--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "radix-ui-react-native-icons": "^1.0.8",
     "react": "18.2.0",
@@ -21,7 +23,7 @@
     "react-native-gesture-handler": "^2.13.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0"
